# CT5195-Master-capstone

./: .gitignore
Assignments/Project Proposal/: IEEE-Word_Template.doc
Introduction/: PDD_Surname_Name_ID-1.docx  _StudentName_StudentID_Supervisor_Rankings-1-1.xlsx
Records/: Capstone Progress.pptx  Literacture review.pptx  TDX compare.docx
Records/VM BenchMark/epoll/: no-tdx-perf-epoll.txt  tdx-perf-bench-epoll.txt
Records/VM BenchMark/mem/: no-tdx-perf-bench-mem-all.txt  tdx-perf-bench-mem-all.txt
Records/VM BenchMark/sched/: no-tdx-sched-benchmark-results.txt  tdx-sched-benchmark-results.txt
Source/: comparison.sh  validate_split.py
Source/datasets/: download.py  download_hf_images.py
Source/distributed_vlm/: cloud.py  comparison_new.sh  edge.py  pyproject.toml  vlm.py
Source/distributed_vlm/img/: Thumbs.db
Study/: NanoVLM Study.docx
Study/Record/: huggingface  wandb
