[project]
name = "distributed-vlm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "einops>=0.8.2",
    "flask>=3.1.2",
    "huggingface-hub>=1.4.1",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
    "wandb>=0.25.0",
]
